// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for a branch 1`] = `
<Fragment>
  <div
    className="display-flex-center flex-0 small"
  >
    <span
      className="header-meta-warnings"
    >
      <ComponentNavWarnings
        componentKey="my-project"
        isBranch={true}
        onWarningDismiss={[MockFunction]}
        warnings={
          [
            {
              "dismissable": false,
              "key": "foo",
              "message": "ERROR_1",
            },
            {
              "dismissable": false,
              "key": "foo",
              "message": "ERROR_2",
            },
          ]
        }
      />
    </span>
    <span
      className="spacer-left nowrap note"
      title="overview.project.last_analysis.date_time.2017-01-02T00:00:00.000Z"
    >
      2017-01-02T00:00:00.000Z
    </span>
    <span
      className="spacer-left nowrap note"
    >
      version 0.0.1
    </span>
    <withCurrentUserContext(HomePageSelect)
      className="spacer-left"
      currentPage={
        {
          "branch": "branch-6.7",
          "component": "my-project",
          "type": "PROJECT",
        }
      }
    />
  </div>
</Fragment>
`;

exports[`should render correctly for a main project branch 1`] = `
<Fragment>
  <div
    className="display-flex-center flex-0 small"
  >
    <span
      className="header-meta-warnings"
    >
      <ComponentNavWarnings
        componentKey="my-project"
        isBranch={true}
        onWarningDismiss={[MockFunction]}
        warnings={
          [
            {
              "dismissable": false,
              "key": "foo",
              "message": "ERROR_1",
            },
            {
              "dismissable": false,
              "key": "foo",
              "message": "ERROR_2",
            },
          ]
        }
      />
    </span>
    <span
      className="spacer-left nowrap note"
      title="overview.project.last_analysis.date_time.2017-01-02T00:00:00.000Z"
    >
      2017-01-02T00:00:00.000Z
    </span>
    <span
      className="spacer-left nowrap note"
    >
      version 0.0.1
    </span>
    <withCurrentUserContext(HomePageSelect)
      className="spacer-left"
      currentPage={
        {
          "branch": undefined,
          "component": "my-project",
          "type": "PROJECT",
        }
      }
    />
  </div>
</Fragment>
`;

exports[`should render correctly for a portfolio 1`] = `
<Fragment>
  <div
    className="display-flex-center flex-0 small"
  >
    <span
      className="header-meta-warnings"
    >
      <ComponentNavWarnings
        componentKey="foo"
        isBranch={true}
        onWarningDismiss={[MockFunction]}
        warnings={
          [
            {
              "dismissable": false,
              "key": "foo",
              "message": "ERROR_1",
            },
            {
              "dismissable": false,
              "key": "foo",
              "message": "ERROR_2",
            },
          ]
        }
      />
    </span>
    <withCurrentUserContext(HomePageSelect)
      className="spacer-left"
      currentPage={
        {
          "component": "foo",
          "type": "PORTFOLIO",
        }
      }
    />
  </div>
</Fragment>
`;

exports[`should render correctly for a pull request 1`] = `
<Fragment>
  <div
    className="display-flex-center flex-0 small"
  >
    <span
      className="header-meta-warnings"
    >
      <ComponentNavWarnings
        componentKey="my-project"
        isBranch={false}
        onWarningDismiss={[MockFunction]}
        warnings={
          [
            {
              "dismissable": false,
              "key": "foo",
              "message": "ERROR_1",
            },
            {
              "dismissable": false,
              "key": "foo",
              "message": "ERROR_2",
            },
          ]
        }
      />
    </span>
    <span
      className="spacer-left nowrap note"
      title="overview.project.last_analysis.date_time.2017-01-02T00:00:00.000Z"
    >
      2017-01-02T00:00:00.000Z
    </span>
  </div>
  <div
    className="navbar-context-meta-secondary display-inline-flex-center"
  >
    <ForwardRef(Link)
      className="link-no-underline big-spacer-right"
      size={12}
      target="_blank"
      to="https://example.com/pull/1234"
    >
      branches.see_the_pr
    </ForwardRef(Link)>
    <withBranchStatus(BranchStatus)
      branchLike={
        {
          "analysisDate": "2018-01-01",
          "base": "master",
          "branch": "feature/foo/bar",
          "key": "1001",
          "target": "master",
          "title": "Foo Bar feature",
          "url": "https://example.com/pull/1234",
        }
      }
      component={
        {
          "analysisDate": "2017-01-02T00:00:00.000Z",
          "breadcrumbs": [],
          "key": "my-project",
          "name": "MyProject",
          "qualifier": "TRK",
          "qualityGate": {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": [],
          "version": "0.0.1",
        }
      }
    />
  </div>
</Fragment>
`;
